💄 fix faint unreadable text

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -21,7 +21,7 @@
 
   html,
   body {
-    @apply text-gray-900 bg-gray-50 dark:bg-gray-950 dark:text-blue-200;
+    @apply text-gray-900 bg-gray-50 dark:bg-gray-950 dark:text-blue-700;
   }
 
   input {
